--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 body {
   background-color: #000000;
+  color: white;
 }
 
 header .navbar {
   border: 0px;
   background-color: #D2232A;
   color: white;
+  font-family: 'Nothing You Could Do';
 }
 header .navbar .navbar-brand {
   color: #FFCB05;
@@ -18,6 +20,7 @@ header .navbar .navbar-brand:hover {
 header .navbar .navbar-nav li a {
   color: white;
   font-weight: bold;
+  font-size: 16px;
 }
 header .navbar .navbar-nav li a:hover {
   background-color: #EA3A4C;
