--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,7 +55,8 @@ header {
 }
 
 footer {
-  .container {}
+  margin-top: 30px;
+  font-family: 'Michroma';
 }
 
 .search-bar {
@@ -65,8 +66,6 @@ footer {
   }
 }
 
-
-}
 
 
 
