--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,24 @@ footer {
   background-color: #D2232A;
 }
 
+.modal-header {
+  position: relative;
+}
+.modal-header .btn-modal-close {
+  position: absolute;
+  right: 20px;
+  display: inline;
+  background-color: Transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  font-size: 30px;
+  color: #FFCB05;
+}
 .modal-header h3 {
+  display: inline;
   font-weight: bold;
   text-shadow: 2px 2px 4px #000000;
   margin-right: 30px;
