--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -124,11 +124,8 @@ footer {
 }
 
 .modal-header {
-  position: relative;
   .btn-modal-close {
-    position: absolute;
-    right: 20px;
-    display: inline;
+    float: left;
     background-color: Transparent;
     background-repeat: no-repeat;
     border: none;
@@ -139,7 +136,7 @@ footer {
     color: #FFCB05;
   }
   h3 {
-    display: inline;
+    float: right;
     font-weight: bold;
     text-shadow: 2px 2px 4px #000000;
     margin-right: 30px;
